namespace Application.interfaces.imageviewers;

public interface IIrfanviewGateway : IImageViewerGateway
{
}